--- a/css/app.css
+++ b/css/app.css
@@ -24,7 +24,28 @@ html, body, h1 {
 }
 
 canvas {
-  background: url("images/Stars-fixed.jpg");
+  background: url("images/bright-star.png");
+  height: 500px;
+  width: 1000px;
+
+  -webkit-animation: slide 20s linear infinite;
+     -moz-animation: slide 20s linear;
+          animation: slide 20s linear infinite;
+}
+
+@-webkit-keyframes slide {
+  0%   {background-position: 0 0;}
+  100% {background-position: 1900px 0;}
+}​
+
+@-moz-keyframes slide {
+  0%   {background-position: 0 0;}
+  100% {background-position: 1900px 0;}
+}
+
+@keyframes slide {
+  0%   {background-position: 0 0;}
+  100% {background-position: 1900px 0;}
 }
 
 .game-name {
